--- a/assest/home.css
+++ b/assest/home.css
@@ -7,11 +7,11 @@
 body {
 text-align: center;
 margin: 0 auto;
-background-image: url(images/bghome.jpg);
+background: url(images/bghome2.jpg);
 align-items: center;
 justify-content: center;
-background-repeat: no-repeat;
-
+background-repeat: repeat;
+background-size: 100%;
 
 
 }
