--- a/assest/home.css
+++ b/assest/home.css
@@ -17,6 +17,8 @@ background-repeat: repeat;
 background-size: 100%;
 
 
+
+
 }
 @keyframes image{
     0%{
@@ -42,12 +44,40 @@ background-size: 100%;
     height: 70px;
     margin-bottom: 20px;
     margin-top: 20px;
-    
+    -webkit-animation:aniload 3s;
+    -moz-animation:aniload 3s;
+    -ms-animation:aniload 3s;
+    -o-animation:aniload 3s;
+    animation:aniload 3s;
     
 }
 
 
-
+@-webkit-keyframes aniload {
+    from {-webkit-transform:translate(0px, 5px)}
+    to   {-webkit-transform:translate(0px, 0px)}
+  }
+  
+  @-moz-keyframes aniload {
+    from {-moz-transform:translate(0px, 10px)}
+    to   {-moz-transform:translate(0px, 0px)}
+  }
+  
+  @-ms-keyframes aniload {
+    from {-ms-transform:translate(0px, 20px)}
+    to   {-ms-transform:translate(0px, 0px)}
+  }
+  
+  @-o-keyframes aniload {
+    from {-o-transform:translate(0px, 30px)}
+    to   {-o-transform:translate(0px, 0px)}
+  }
+  
+  @keyframes aniload {
+    from {transform:translate(0px, 40px)}
+    to   {transform:translate(0px, 0px)}
+    
+  }
 .student{
     font-family: "Bradley Hand ITC";
     margin-bottom: 20px;
@@ -57,16 +87,37 @@ background-size: 100%;
     margin: 0 auto; 
     letter-spacing: .1em; 
     color: white;
+    
+        -webkit-animation:aniload 3s;
+        -moz-animation:aniload 3s;
+        -ms-animation:aniload 3s;
+        -o-animation:aniload 3s;
+        animation:aniload 3s;
+        
+
+    
 }
+
+
+
   .mid > hr {
       width: 200px;
       background: white;
-      
+      -webkit-animation:aniload 3s;
+      -moz-animation:aniload 3s;
+      -ms-animation:aniload 3s;
+      -o-animation:aniload 3s;
+      animation:aniload 3s;
 
   }
   .elon {
       z-index: 2;
       position: relative;
+      -webkit-animation:aniload 3s;
+      -moz-animation:aniload 3s;
+      -ms-animation:aniload 3s;
+      -o-animation:aniload 3s;
+      animation:aniload 3s;
   }
 .goals-png {
     width: 100%;
@@ -121,6 +172,11 @@ box-shadow: 0px 0px 30px 0px rgb(0, 0, 0);
 transition: all 0.3s ease;
 margin-top: 30px;
 margin-bottom: 50px;
+-webkit-animation:aniload 3s;
+-moz-animation:aniload 3s;
+-ms-animation:aniload 3s;
+-o-animation:aniload 3s;
+animation:aniload 3s;
 }
 .ben > img:hover {
 box-shadow: 0px 0px 30px 10px rgb(255, 255, 255) ;
@@ -171,7 +227,7 @@ box-shadow: 0px 0px 30px 10px rgb(255, 255, 255) ;
     @media screen and (max-width: 1080px) {
 
         .container {
-            width: 95%;
+            width: 91%;
         }
 
     }
