--- a/assest/home.css
+++ b/assest/home.css
@@ -1,5 +1,5 @@
 * {
-    font-family: "Letter Gothic Std";
+    font-family: "Arial";
     text-decoration: none;
     min-width: 60px;
     box-sizing: border-box;
@@ -194,6 +194,8 @@ box-shadow: 0px 0px 30px 10px rgb(255, 255, 255) ;
     animation: 
       typing 3s steps(22, end),
       blink-caret .75s step-end infinite; 
+      margin-bottom: 20px;
+      color: white;
 }
 @keyframes typing {
     from { width: 0 }
@@ -239,7 +241,7 @@ box-shadow: 0px 0px 30px 10px rgb(255, 255, 255) ;
         margin-left: 100px;
         margin-bottom: 1rem;
         margin-right: 13px;
-       
+       border-radius: 3px;
         padding-left: 5px;
         transition: all 0.2s ease;
         background: rgb(255, 255, 255);
@@ -263,7 +265,7 @@ box-shadow: 0px 0px 30px 10px rgb(255, 255, 255) ;
         border: 1px solid rgb(255, 255, 255);
         width: 39%;
         height: 3rem;
-       
+       border-radius: 3px;
        margin-left: -85px;
         padding-left: 5px;
      transition: all 0.2s ease;
@@ -295,7 +297,7 @@ box-shadow: 0px 0px 30px 10px rgb(255, 255, 255) ;
             resize:none;
             margin-left: 100px;
             margin-bottom: 20px;
-            
+            border-radius: 3px;
             transition: all 0.2s ease;
             height: 30%;
         }
