--- a/assest/home.css
+++ b/assest/home.css
@@ -3,54 +3,77 @@
     text-decoration: none;
     min-width: 60px;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 body {
 text-align: center;
 margin: 0 auto;
-background: url(images/bghome2.jpg) center center fixed;
-animation: image 13s infinite alternate-reverse;
--webkit-animation: image 13s infinite alternate-reverse;
--moz-animation: image 13s infinite alternate-reverse;
-align-items: center;
-justify-content: center;
-background-repeat: repeat;
-background-size: 100%;
+background: rgb(145, 174, 206)  center center fixed;
 
 
 
 
 }
-@keyframes image{
-    0%{
-        background: url(images/bghome1.jpg);
-    }
-    25%{
-        background: url(images/bghome2.jpg);
-    }
-    50%{
-        background: url(images/bghome3.jpg);
-    }
-    75%{
-        background: url(images/bghome4.jpg);
-    }
-    100%{
-        background: url(images/bghome5.jpg);
-    }
 
-}
 
-.mid-logo {
-    width: 70px;
-    height: 70px;
-    margin-bottom: 20px;
-    margin-top: 20px;
+
+.q-about {
+    border: 1px solid black;
+} 
+
+.a-about {
+    font-family: "consolas";
+    color: rgb(0, 0, 0);
+    font-size: 25px;
+    float: left;
+    margin: 0 auto;
+    margin-top: -60px;
+    margin-left: 190px;
     -webkit-animation:aniload 3s;
     -moz-animation:aniload 3s;
     -ms-animation:aniload 3s;
     -o-animation:aniload 3s;
     animation:aniload 3s;
+    transition: all 0.2s ease;
+}
+.a-about:hover {
+    color: rgb(223, 223, 223);
+}
+.a-contact {
+    font-family: "consolas";
+    color: rgb(0, 0, 0);
+    font-size: 25px;
+    float: left;
+    margin: 0 auto;
+    margin-top: -60px;
+    margin-left: 290px;
+    -webkit-animation:aniload 3s;
+    -moz-animation:aniload 3s;
+    -ms-animation:aniload 3s;
+    -o-animation:aniload 3s;
+   animation:aniload 3s;
+    transition: all 0.2s ease;
+}
+.a-contact:hover {
+    color: rgb(223, 223, 223);
     
 }
+.mid-logo {
+    
+    border-right: 3px solid black;    
+    width: 130px;
+    height: 100px;
+    border-width: 2px;
+    margin-top: -100px;
+    margin-left: 40px;
+    -webkit-animation:aniload 3s;
+    -moz-animation:aniload 3s;
+    -ms-animation:aniload 3s;
+    -o-animation:aniload 3s;
+    animation:aniload 3s;
+    float: left;
+}
+
 
 
 @-webkit-keyframes aniload {
@@ -78,7 +101,16 @@ background-size: 100%;
     to   {transform:translate(0px, 0px)}
     
   }
-.student{
+.ben hr {
+    width: 40%;
+    border-bottom: 1px solid black;
+    -webkit-animation:aniload 3s;
+        -moz-animation:aniload 3s;
+        -ms-animation:aniload 3s;
+        -o-animation:aniload 3s;
+        animation:aniload 3s;
+}
+  .student{
     font-family: "consolas";
     margin-bottom: 20px;
     overflow: hidden; 
@@ -86,7 +118,7 @@ background-size: 100%;
     white-space: nowrap; 
     margin: 0 auto; 
     letter-spacing: .1em; 
-    color: white;
+    color: rgb(44, 44, 44);
     
         -webkit-animation:aniload 3s;
         -moz-animation:aniload 3s;
@@ -108,6 +140,8 @@ background-size: 100%;
       -ms-animation:aniload 3s;
       -o-animation:aniload 3s;
       animation:aniload 3s;
+      float: left;
+      
 
   }
   .elon {
@@ -119,61 +153,75 @@ background-size: 100%;
       -o-animation:aniload 3s;
       animation:aniload 3s;
   }
-.goals-png {
-    width: 100%;
-    margin-top: -210px;
-    border: none;
-    box-shadow: 0px 0xp 10px 20px rgb(0, 0, 0);
-    z-index: -1;
-}
-.about {
+
+
+.meet {
+    float: right;
+    text-align: justify;
+    margin-top: 200px;
     
-    border: 1px solid black;
-    padding: 20px;
-    color: white;
-    background: black;
-    margin-bottom: 60px;
-    box-shadow: 0px 0px 10px 20px black;
-    width: 100%;
-     
+}
+.baslik {
+    margin-left: 48px;
+    font-family: "consolas";
+}
+.meet > p {
+    font-size: 22px;
+    font-family: "consolas";
+}
+.about-me-icon {
+    width: 18%;
+    height: 16%;
+    margin-top: 210px;
+    
+    
+    
 }
 .aciklama {
     font-size: large;
     text-align: justify;
     margin-left: 50px;
-    margin-right: 50px;
-} 
-.language {
-     padding-top: 20px;
- }
- .html-viki {
-     color: #FF5733;
-     font-size: x-large;
+    margin-right: 200px;
+}
+.project {
+    float: left;
     
-    }
-    
-.css-viki {
-    color: #264de4 ;
-    font-size: x-large;
+}
+.project .project-my {
+    float: right;
+    margin-top: 250px;
+    margin-left: 120px;
+   
 } 
-.very-soon {
+.project .project-my .my-project {
+    font-family: "consolas";
+
+}
+.project p {
+    font-family: "consolas";
     font-size: x-large;
 
 }
-.about > .ab_hr {
-   border:  2px solid  cyan;
-   transition: 0.6s ease;
-   border-radius: 10px;
-}
+.project-img {
+    width: 32%;
+    height: 30%;
+    margin-top: 190px;
+    
+    margin-left: -100px;
   
+}
 
+  
+.ben {
+    margin-top: 150px;
+}
 .ben > img {
 border: none;
 border-radius: 400px;
 width: 300px;
 box-shadow: 0px 0px 30px 0px rgb(0, 0, 0);
 transition: all 0.3s ease;
-margin-top: 30px;
+margin-top: 100px;
 margin-bottom: 50px;
 -webkit-animation:aniload 3s;
 -moz-animation:aniload 3s;
@@ -182,8 +230,51 @@ margin-bottom: 50px;
 animation:aniload 3s;
 }
 .ben > img:hover {
-box-shadow: 0px 0px 30px 10px rgb(255, 255, 255) ;
+box-shadow: 0px 0px 30px 0px rgb(255, 255, 255) ;
+outline: none;
+border: none;
 }
+
+.languages {
+    float: right;
+    margin-right: 200px;
+    margin-top: 300px;
+
+    
+}
+.languages .vikip .viki .html-viki  {
+    margin-right: 320px;
+    color: #e34c26;
+    font-size: x-large;
+    transition: all 0.2s ease;
+}
+.languages .vikip .viki .html-viki:hover {
+    color: #ffffff;
+    
+}  
+
+.languages .vikip .viki-c a {
+    margin-right: 325px;
+    color: #264de4;
+    font-size: x-large;
+    transition: all 0.2s ease;
+}
+.languages .vikip .viki-c a:hover {
+    color: #fff;
+}
+.languages h1 {
+    margin-right: 620px;
+}
+.icon-code {
+    width: 19%;
+    height: 17%;
+    float: right;
+    margin-top: -20px;
+    margin-right: 50px;
+    border-radius: 200px;
+    
+}
+
 
 
 
@@ -219,6 +310,7 @@ box-shadow: 0px 0px 30px 10px rgb(255, 255, 255) ;
     margin: 0 auto;
     max-width: 100%;
     width: 1140px;
+    margin-top: 75rem;
 }
 
     @media screen and (max-width: 1680px) {
@@ -236,13 +328,14 @@ box-shadow: 0px 0px 30px 10px rgb(255, 255, 255) ;
         }
 
     }
+    
     .name {
         border: 1px solid rgb(255, 255, 255);    
         width: 39%;
         height: 3rem;
         float: left;
         margin-left: 100px;
-        margin-bottom: 1rem;
+        margin-bottom: 15px;
         margin-right: 13px;
        border-radius: 3px;
         padding-left: 5px;
@@ -331,6 +424,7 @@ box-shadow: 0px 0px 30px 10px rgb(255, 255, 255) ;
     .submit:focus {
         outline: none;
     }
+    
     .reset:focus {
         outline: none;
     }
@@ -341,6 +435,7 @@ box-shadow: 0px 0px 30px 10px rgb(255, 255, 255) ;
         border: none;
          width: 20rem;
         cursor: pointer;
+        
         }
     .reset:hover {
         background: rgb(255, 255, 255);
@@ -361,6 +456,7 @@ box-shadow: 0px 0px 30px 10px rgb(255, 255, 255) ;
 }
 .wrapper {
     display: inline-flex;
+    color: black;
 
 }
 .wrapper .icon {
@@ -373,7 +469,7 @@ box-shadow: 0px 0px 30px 10px rgb(255, 255, 255) ;
     position: relative;
     z-index: 2;
     transition: all 0.4s cubic-bezier(0.68,-0.55,0.265,1.55);
-    
+    color: black;
 }
 
 .wrapper .icon span {
@@ -387,11 +483,17 @@ box-shadow: 0px 0px 30px 10px rgb(255, 255, 255) ;
     position: relative;
     z-index: 2;
     transition: all 0.3s ease;
+    color: black;
 }
 
 .wrapper .icon span i {
     font-size: 25px;
     line-height: 54px;
+    color: black;
+    
+}
+.wrapper .fab {
+    color: black;
 }
 .wrapper .icon .tooltip {
     position: absolute;
@@ -483,75 +585,114 @@ background: #46C1F6;
     font-family: 'Courier New', Courier, monospace;
     margin-top: 20px;
     margin-bottom: 10px;
+    color: white;
+}
+footer {
+    
+    padding-top: 80px;
+    
 }
 @media screen and (max-width: 1000px)  
 {
         
-    body {
-        background-repeat: repeat;
-        background-image: url(images/bghomephone.jpg) center center fixed;
-animation: image 13s infinite alternate-reverse;
--webkit-animation: image 13s infinite alternate-reverse;
--moz-animation: image 13s infinite alternate-reverse;
     
-    }
     
     
     .mid-logo {
-        width: 140px;
-        height: 140px; 
-     }
+        width: 200px;
+        height: 170px;
+        border: none;
+    }
+    .a-about {
+        font-size: 0px;
+    }
+    .a-contact {
+        font-size: 0px;
+    }
+    
      .student {
          font-size: 59px;
-         margin-bottom: 15px;
+         
+         margin-bottom: 100px;
      }
      .ben > img {
          box-shadow:0px 0px 90px 0px  black;
+         margin-left: -220px;
      }
-     .mid > hr {
-         border: 2px solid white;
-         width: 300px;
-         margin-bottom: 30px;
-     }
-     .about > h1 {
-         font-size: 60px;
-     }
-     .about > p {
-         font-size: 40px;
-     }
-     .html-viki {
-         font-size: 40px;
-     }
-     .css-viki {
-        font-size: 45px;
-    }
+     
+     
      .ben > img {
          width: 600px;
          height: 600px;
     }
-    .elon {
-        font-size: x-large;
-        text-align: justify;
-        margin-left: 70px;
-        margin-right: 70px;
+    
+    .about img {
+        width: 35%;
     }
-    .goals-png {
-        margin-top: 20px;
-    }
-    .forbuy .meet {
+    .about .meet .baslik {
         font-size: 50px;
-        margin-bottom: 30px;
-        margin-top: 150px;
+        margin-top: -150px;
+    }
+    .about p {
+        font-size: 30px;
+        margin-left: 190px;
+        
+    }
+    .languages img {
+        width: 33%;
+        margin-right: 180px;
+        margin-top: -200px;
+    }
+    .languages .languages-span h1 {
+        font-size: 75px;
+        margin-top: 70px;
+        margin-right: -70px;
+    }
+    .languages .vikip .viki .html-viki {
+        font-size: 60px;
+        margin-right: -120px;
+        
+    }
+    .languages .vikip .viki-c .css-viki {
+        font-size: 60px;
+        margin-right: -120px;
+       
+    }
+    .project {
+        margin-bottom: 250px;
+    }
+    .project img {
+        width: 55%;
+        margin-right: -1100px;
+    }
+    .project .project-my {
+        margin-top: 430px;
+        font-size: 50px;
+        margin-left: 220px;
+    }
+    .project p {
+        font-size: 65px;
+        margin-top: -30px;
+        text-align: center;
+    }
+    .container {
+        margin-bottom: -200px;
+    }
+    .h2-meet {
+       padding: 90px;
+        font-size: 60px;
+        margin-bottom: -20px;
     }
     .name {
-        width: 100%;
+        width: 90%;
         margin: 0 auto;
-        margin-left: 0px;
+        margin-left: 50px;
         height: 120px;
         border-radius: 20px;
         padding: 20px;
         font-size: 40px;
         font-family: Arial, Helvetica, sans-serif;
+
     }
     .name::placeholder {
         font-size: 40px;
@@ -560,7 +701,7 @@ animation: image 13s infinite alternate-reverse;
         border: 2px solid black;
     }
     .email {
-        width: 100%;
+        width: 90%;
         margin: 0 auto;
         margin-left: 0px;
         height: 120px;
@@ -577,10 +718,10 @@ animation: image 13s infinite alternate-reverse;
         border: 2px solid black;
     }
     textarea {
-        width: 100%;
+        width: 90%;
         height: 400px;
         margin: 0 auto;
-        margin-left: 0px;
+        margin-left: 50px;
         margin-top: 20px;
         background: white;
         padding: 20px;
@@ -588,23 +729,34 @@ animation: image 13s infinite alternate-reverse;
         font-size: 30px;
         font-family: Arial, Helvetica, sans-serif;
     }
+    textarea::placeholder {
+        font-size: 40px;
+    }
     textarea:focus {
         border: 2px solid black;
+
+    }
+    form {
+        
+        margin: 0 auto;
+        width: 111%;
+        margin-left: -49px;
     }
 
 
 
     .submit,.reset {
        border-radius: 45px;
-        width: 90%;
+        width: 80%;
         height: 110px; 
         font-size: 50px;
         margin-top: 20px ;
         transition: 0.2s ease;
+
     }
     .submit:hover, .reset:hover {
         background: black;
-        width: 90%;
+        width: 80%;
         height: 110px;
         color: white;
     }
@@ -627,7 +779,12 @@ animation: image 13s infinite alternate-reverse;
         
     }
     .copyright {
-        margin-top: 60px;
-        font-size: 14px;
+        margin-top: 90px;
+        font-size: 40px;
+        padding-bottom: 20px;
+    }
+    footer {
+        margin-top: 100px;
+        
     }
 }
