--- a/assest/home.css
+++ b/assest/home.css
@@ -286,6 +286,30 @@ textarea:focus {
     outline: none;
     box-shadow: 0px 0px 20px 0px white;
 }
+.reset-btn {
+    display: flex;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    border: none;
+    padding: 5px 11px;
+    border-radius: 200%;
+    background: red;
+    cursor: pointer;
+    font-size: x-large;
+    transition: 0.2s;
+}
+.reset-btn:focus {
+    outline: none;
+}
+.reset-btn:hover {
+    transform: scale(1.2);
+    transform:rotate(45deg);
+}
+.reset-btn:active {
+    transform: scale(0.9);
+} 
+
 .submit-btn {
     padding: 1px 1px;
     display: flex;
@@ -308,10 +332,11 @@ textarea:focus {
 .submit-btn-a {
     width: 280px;
     height: 50px;
-    padding-top: 7px;
+    
     align-items: center;
     justify-content: center;
     color: rgb(255, 255, 255);
+    
 }
 .submit-btn-a:hover {
     color: rgb(0, 0, 0);
@@ -319,6 +344,7 @@ textarea:focus {
 }
 .social-media a {
     color: black;
+    
 
 }
 .social-media {
@@ -359,7 +385,7 @@ textarea:focus {
 
 }
 @media (max-width: 500px) and (min-width: 200px) {
-    
+   
   header {
       display: none;
   } 
@@ -448,6 +474,9 @@ textarea:focus {
         width: 130%;
         margin-left: -36px;
         
+    }
+    .reset-btn:active {
+        transform: rotate(45deg);
     }
 
 }
