--- a/assest/home.css
+++ b/assest/home.css
@@ -303,9 +303,9 @@ textarea:focus {
     outline: none;
 }
 .fa-redo:hover {
-    transform: scale(1.2);
-    transform:rotate(360deg);
     color: black;
+    transform: rotate(360deg);
+    /* transform: scale(1.2); */
 }
 .fa-redo:active {
     transform: scale(0.9);
@@ -469,7 +469,7 @@ textarea:focus {
 
     }
     .submit-btn {
-        margin-left: -7px;
+        margin-left: 3%;
     }
     .copyright {
         width: 130%;
